--- a/name-changer/package.json
+++ b/name-changer/package.json
@@ -19,6 +19,7 @@
     "acorn-walk": "^7.1.1",
     "escodegen": "^1.14.1",
     "outdent": "^0.7.1",
+    "tslint": "^6.1.0",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
