--- a/binary-tree/package.json
+++ b/binary-tree/package.json
@@ -2,7 +2,7 @@
   "name": "name-changer",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watchAll",
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/object-hash": "^1.3.1",
+    "object-hash": "^2.0.3",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
